fix to long project names not wrapping within the Roles box

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -494,6 +494,14 @@ ul.users_details li {
 	min-height: 6em;
 }
 
+li.group p{	
+	white-space: pre-wrap; /* css-3 */
+	white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+	white-space: -pre-wrap; /* Opera 4-6 */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 ul.users_details li p {    
     margin: 0.1em;
 	padding: 0.1em;
@@ -509,7 +517,7 @@ ul.users_details li p {
 
 .foldContent {
     padding-top:0.5em;
-    background-color: #FCFCFF;    
+    background-color: #FCFCFF;    	
 }
 
 table.conditions_or_factors {
